tests/snapshots/run_wpt_conformance__onnx_logicalXor_uint8_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 broadcast 4D to 5D",
    "onnx",
    "PASS",
)
