tests/snapshots/run_wpt_conformance__onnx_lstmCell_float32_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lstm_cell.https.any.js",
    "lstmCell float32 tensors with all options",
    "onnx",
    "PASS",
)
