tests/snapshots/run_wpt_conformance__onnx_lstm_float16_tensors_steps_1_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lstm.https.any.js",
    "lstm float16 tensors steps=1 with all options",
    "onnx",
    "PASS",
)
