tests/snapshots/run_wpt_conformance__onnx_lstm_float32_tensors_steps_2_with_bidirections.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lstm.https.any.js",
    "lstm float32 tensors steps=2 with bidirections",
    "onnx",
    "PASS",
)
